--- a/ParkPass/session.html
+++ b/ParkPass/session.html
@@ -119,10 +119,10 @@
                 </div>
 
                 <!--* Вариант, когда нет сканирования QR кода -->
-                <button class="session-box-btn session-box-tarif-btn justify-content-center open-modal-btn" target-modal="#tarif-modal" style="width: 100%; margin-top: 10px;">
+                <!-- <button class="session-box-btn session-box-tarif-btn justify-content-center open-modal-btn" target-modal="#tarif-modal" style="width: 100%; margin-top: 10px;">
                     <img src="img/tarif.png" alt="">
                     <span>Тарифы</span>
-                </button>
+                </button> -->
             </div>
 
             <!-- Bottom -->
