--- a/ParkPass/session.html
+++ b/ParkPass/session.html
@@ -158,7 +158,7 @@
     </div>
 
     <!-- Payment -->
-    <div class="modal payment" id="payment-modal" data-y="65%">
+    <div class="modal payment" id="payment-modal" data-y="70%">
         <div class="modal-inner">
             <!-- Button -->
             <button class="payment-btn btn open-modal-btn" target-modal="#sbp-modal">
@@ -234,128 +234,130 @@
                 </svg>
             </div>
 
-            <!-- Box -->
-            <div class="sbp-box">
-                <!-- Title -->
-                <h4 class="sbp-box-title">Популярные банки</h4>
+            <div class="sbp-container w-100">
+                <!-- Box -->
+                <div class="sbp-box">
+                    <!-- Title -->
+                    <h4 class="sbp-box-title">Популярные банки</h4>
 
-                <!-- Lists -->
-                <ul class="sbp-box-lists">
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/sber.png" alt="Сбербанк логотип" class="icon">
+                    <!-- Lists -->
+                    <ul class="sbp-box-lists">
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/sber.png" alt="Сбербанк логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Сбербанк</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Сбербанк</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/alpha.png" alt="АЛЬФА-БАНК логотип" class="icon">
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/alpha.png" alt="АЛЬФА-БАНК логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>АЛЬФА-БАНК</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>АЛЬФА-БАНК</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/vtb.png" alt="Банк ВТБ логотип" class="icon">
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/vtb.png" alt="Банк ВТБ логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Банк ВТБ</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Банк ВТБ</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/tbank.png" alt="Т-Банк логотип" class="icon">
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/tbank.png" alt="Т-Банк логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Т-Банк</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Т-Банк</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
 
-            <!-- Box -->
-            <div class="sbp-box">
-                <!-- Title -->
-                <h4 class="sbp-box-title">Популярные банки</h4>
+                <!-- Box -->
+                <div class="sbp-box">
+                    <!-- Title -->
+                    <h4 class="sbp-box-title">Популярные банки</h4>
 
-                <!-- Lists -->
-                <ul class="sbp-box-lists">
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/ray.png" alt="Райфайзенбанк логотип" class="icon">
+                    <!-- Lists -->
+                    <ul class="sbp-box-lists">
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/ray.png" alt="Райфайзенбанк логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Райфайзенбанк</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Райфайзенбанк</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/gazprom.png" alt="Газпромбанк логотип" class="icon">
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/gazprom.png" alt="Газпромбанк логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Газпромбанк</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Газпромбанк</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/psb.png" alt="Банк ПСБ логотип" class="icon">
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/psb.png" alt="Банк ПСБ логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Банк ПСБ</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Банк ПСБ</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <!-- Icon -->
-                            <img src="img/sbp/sovkom.png" alt="Совкомбанк логотип" class="icon">
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- Icon -->
+                                <img src="img/sbp/sovkom.png" alt="Совкомбанк логотип" class="icon">
 
-                            <!-- Content -->
-                            <div class="content">
-                                <h5>Совкомбанк</h5>
+                                <!-- Content -->
+                                <div class="content">
+                                    <h5>Совкомбанк</h5>
 
-                                <img src="img/arrow-right.png" class="arrow">
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+                                    <img src="img/arrow-right.png" class="arrow">
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
             <!-- Close button -->
