--- a/M-Auto/index.html
+++ b/M-Auto/index.html
@@ -68,8 +68,7 @@
 	</header>
 
 	<!--! Start banner -->
-	<section class="start-banner section adaptive-banner" style="background-image: url('/img/start-banner.webp');"
-	mobile-src="/img/start-banner-mobile.webp">
+	<section class="start-banner section adaptive-banner" style="background-image: url('img/start-banner.webp');" mobile-src="img/start-banner-mobile.webp">
 		<!-- Container -->
 		<div class="m-container">
 			<div class="d-md-flex justify-content-between align-items-md-start align-items-center">
@@ -84,7 +83,7 @@
 					<!-- Button -->
 					<a href="#" class="btn start-banner-btn">
 						<!-- Flare -->
-						<img src="/img/flare3.png" class="btn-flare" alt="Flare">
+						<img src="img/flare3.png" class="btn-flare" alt="Flare">
 
 						<!-- Inner -->
 						<span class="btn-inner">
@@ -96,7 +95,7 @@
 
 							<!-- Content -->
 							<span class="btn-content">
-								<img src="/img/arrow-top-right.svg" alt="Arrow icon">
+								<img src="img/arrow-top-right.svg" alt="Arrow icon">
 								Оставить заявку
 							</span>
 						</span>
@@ -113,7 +112,7 @@
 							<div class="swiper-slide start-banner-slider-item" video-src="/video/1.mp4">
 								<!-- Play button -->
 								<div class="play-btn">
-									<img src="/img/play-icon.svg" alt="Play icon">
+									<img src="img/play-icon.svg" alt="Play icon">
 								</div>
 
 								<!-- Video -->
@@ -126,7 +125,7 @@
 							<div class="swiper-slide start-banner-slider-item" video-src="/video/2.mp4">
 								<!-- Play button -->
 								<div class="play-btn">
-									<img src="/img/play-icon.svg" alt="Play icon">
+									<img src="img/play-icon.svg" alt="Play icon">
 								</div>
 
 								<!-- Video -->
@@ -139,7 +138,7 @@
 							<div class="swiper-slide start-banner-slider-item" video-src="/video/1.mp4">
 								<!-- Play button -->
 								<div class="play-btn">
-									<img src="/img/play-icon.svg" alt="Play icon">
+									<img src="img/play-icon.svg" alt="Play icon">
 								</div>
 
 								<!-- Video -->
@@ -228,7 +227,7 @@
 			</div>
 
 			<div class="about-img" data-aos="fade-right">
-				<img src="/img/about.webp" alt="О нас">
+				<img src="img/about.webp" alt="О нас">
 			</div>
 		</div>
 	</section>
@@ -242,7 +241,7 @@
 			<!-- Row -->
 			<div class="services-row d-flex justify-content-between flex-wrap w-100">
 				<!-- Service -->
-				<div class="service" style="background-image: url('/img/service1.webp');" data-aos="fade-down">
+				<div class="service" style="background-image: url('img/service1.webp');" data-aos="fade-down">
 					<!-- Title -->
 					<h3 class="service-title">Русификация</h3>
 
@@ -252,7 +251,7 @@
 
 				<!-- Column -->
 				<div class="services-column" data-aos="fade-down">
-					<div class="service" style="background-image: url('/img/service2.webp');">
+					<div class="service" style="background-image: url('img/service2.webp');">
 						<!-- Title -->
 						<h3 class="service-title">Смена региона</h3>
 
@@ -262,7 +261,7 @@
 						</p>
 					</div>
 
-					<div class="service" style="background-image: url('/img/service3.webp'); background-position-y: 30%;">
+					<div class="service" style="background-image: url('img/service3.webp'); background-position-y: 30%;">
 						<!-- Title -->
 						<h3 class="service-title">Активация штатной навигации</h3>
 
@@ -275,7 +274,7 @@
 
 				<!-- Column -->
 				<div class="services-column" data-aos="fade-down">
-					<div class="service" style="background-image: url('/img/service4.webp'); background-position-y: 30%;">
+					<div class="service" style="background-image: url('img/service4.webp'); background-position-y: 30%;">
 						<!-- Title -->
 						<h3 class="service-title">Активация Apple CarPlay</h3>
 
@@ -285,7 +284,7 @@
 						</p>
 					</div>
 
-					<div class="service" style="background-image: url('/img/service5.webp'); background-position-y: 25%;">
+					<div class="service" style="background-image: url('img/service5.webp'); background-position-y: 25%;">
 						<!-- Title -->
 						<h3 class="service-title">Активация Android Auto</h3>
 
@@ -297,7 +296,7 @@
 				</div>
 
 				<!-- Service -->
-				<div class="service last" style="background-image: url('/img/service6.webp');" data-aos="fade-down">
+				<div class="service last" style="background-image: url('img/service6.webp');" data-aos="fade-down">
 					<!-- Title -->
 					<h3 class="service-title">Вызов специалиста</h3>
 
@@ -311,13 +310,13 @@
 				<!-- Button -->
 				<a href="#" class="btn services-btn">
 					<!-- Flare -->
-					<img src="/img/flare3.png" class="btn-flare" alt="Flare">
+					<img src="img/flare3.png" class="btn-flare" alt="Flare">
 
 					<!-- Inner -->
 					<span class="btn-inner">
 						<!-- Content -->
 						<span class="btn-content">
-							<img src="/img/arrow-top-right.svg" alt="Arrow icon">
+							<img src="img/arrow-top-right.svg" alt="Arrow icon">
 							Заказать услугу
 						</span>
 					</span>
@@ -359,22 +358,22 @@
 					<!-- Wrapper -->
 					<div class="swiper-wrapper">
 						<!-- Item -->
-						<div class="portfolio-slider-item swiper-slide" style="background-image: url('/img/portfolio1.webp');"></div>
+						<div class="portfolio-slider-item swiper-slide" style="background-image: url('img/portfolio1.webp');"></div>
 
 						<!-- Item -->
-						<div class="portfolio-slider-item swiper-slide" style="background-image: url('/img/portfolio2.webp');"></div>
+						<div class="portfolio-slider-item swiper-slide" style="background-image: url('img/portfolio2.webp');"></div>
 
 						<!-- Item -->
-						<div class="portfolio-slider-item swiper-slide" style="background-image: url('/img/portfolio3.webp');"></div>
+						<div class="portfolio-slider-item swiper-slide" style="background-image: url('img/portfolio3.webp');"></div>
 
 						<!-- Item -->
-						<div class="portfolio-slider-item swiper-slide" style="background-image: url('/img/portfolio1.webp');"></div>
+						<div class="portfolio-slider-item swiper-slide" style="background-image: url('img/portfolio1.webp');"></div>
 
 						<!-- Item -->
-						<div class="portfolio-slider-item swiper-slide" style="background-image: url('/img/portfolio2.webp');"></div>
+						<div class="portfolio-slider-item swiper-slide" style="background-image: url('img/portfolio2.webp');"></div>
 
 						<!-- Item -->
-						<div class="portfolio-slider-item swiper-slide" style="background-image: url('/img/portfolio3.webp');"></div>
+						<div class="portfolio-slider-item swiper-slide" style="background-image: url('img/portfolio3.webp');"></div>
 					</div>
 				</div>
 
@@ -470,13 +469,13 @@
 							<!-- Submit button -->
 							<button type="submit" class="btn contact-form-btn">
 								<!-- Flare -->
-								<img src="/img/flare3.png" class="btn-flare" alt="Flare">
+								<img src="img/flare3.png" class="btn-flare" alt="Flare">
 
 								<!-- Inner -->
 								<span class="btn-inner">
 									<!-- Content -->
 									<span class="btn-content">
-										<img src="/img/arrow-top-right.svg" alt="Arrow icon">
+										<img src="img/arrow-top-right.svg" alt="Arrow icon">
 										Отправить
 									</span>
 								</span>
@@ -583,17 +582,17 @@
 					<div class="d-flex footer-social-buttons-row">
 						<!-- Item -->
 						<a href="#" class="footer-social-buttons-item">
-							<img src="/img/telegram.svg" alt="telegram icon">
+							<img src="img/telegram.svg" alt="telegram icon">
 						</a>
 
 						<!-- Item -->
 						<a href="#" class="footer-social-buttons-item">
-							<img src="/img/driveru.png" alt="driveru icon">
+							<img src="img/driveru.png" alt="driveru icon">
 						</a>
 
 						<!-- Item -->
 						<a href="#" class="footer-social-buttons-item">
-							<img src="/img/bubbles.svg" alt="Bubbles icon">
+							<img src="img/bubbles.svg" alt="Bubbles icon">
 						</a>
 					</div>
 				</div>
@@ -630,7 +629,7 @@
 		</menu>
 
 		<!-- Logo -->
-		<img src="/img/logo.png" class="mobile-nav-logo" alt="Logo">
+		<img src="img/logo.png" class="mobile-nav-logo" alt="Logo">
 
 		<!-- Info -->
 		<div class="mobile-nav-info">
