--- a/M-Auto/thankyou.html
+++ b/M-Auto/thankyou.html
@@ -68,8 +68,8 @@
 	</header>
 
     <!-- Info page -->
-    <main class="info-page thankyou adaptive-banner" style="background-image: url('/img/start-banner.webp');"
-	mobile-src="/img/start-banner-mobile.webp">
+    <main class="info-page thankyou adaptive-banner" style="background-image: url('img/start-banner.webp');"
+	mobile-src="img/start-banner-mobile.webp">
         <!-- Container -->
         <div class="m-container">
             <!-- Content -->
@@ -83,13 +83,13 @@
                 <!-- Button -->
                 <a href="index.html" class="btn info-page-btn">
                     <!-- Flare -->
-                    <img src="/img/flare3.png" class="btn-flare" alt="Flare">
+                    <img src="img/flare3.png" class="btn-flare" alt="Flare">
 
                     <!-- Inner -->
                     <span class="btn-inner">
                         <!-- Content -->
                         <span class="btn-content">
-                            <img src="/img/arrow-top-right.svg" alt="Arrow icon">
+                            <img src="img/arrow-top-right.svg" alt="Arrow icon">
                             Вернуться на сайт
                         </span>
                     </span>
@@ -109,7 +109,7 @@
 		</menu>
 
 		<!-- Logo -->
-		<img src="/img/logo.png" class="mobile-nav-logo" alt="Logo">
+		<img src="img/logo.png" class="mobile-nav-logo" alt="Logo">
 
 		<!-- Info -->
 		<div class="mobile-nav-info">
