--- a/M-Auto/index.html
+++ b/M-Auto/index.html
@@ -28,23 +28,23 @@
 			<!-- Menu -->
 			<menu class="header-menu d-md-flex d-none">
 				<!-- Item -->
-				<li class="header-menu-item">
-					<a href="#">О компании</a>
+				<li class="header-menu-item menu-item">
+					<a href="#about">О компании</a>
 				</li>
 
 				<!-- Item -->
-				<li class="header-menu-item">
-					<a href="#">Услуги</a>
+				<li class="header-menu-item menu-item">
+					<a href="#services">Услуги</a>
 				</li>
 
 				<!-- Item -->
-				<li class="header-menu-item">
-					<a href="#">Проекты</a>
+				<li class="header-menu-item menu-item">
+					<a href="#portfolio">Проекты</a>
 				</li>
 
 				<!-- Item -->
-				<li class="header-menu-item">
-					<a href="#">Контакты</a>
+				<li class="header-menu-item menu-item">
+					<a href="#contact">Контакты</a>
 				</li>
 			</menu>
 
@@ -109,7 +109,7 @@
 						<!-- Wrapper -->
 						<div class="swiper-wrapper">
 							<!-- Item -->
-							<div class="swiper-slide start-banner-slider-item" video-src="/video/1.mp4">
+							<div class="swiper-slide start-banner-slider-item" video-src="video/1.mp4">
 								<!-- Play button -->
 								<div class="play-btn">
 									<img src="img/play-icon.svg" alt="Play icon">
@@ -122,7 +122,7 @@
 							</div>
 
 							<!-- Item -->
-							<div class="swiper-slide start-banner-slider-item" video-src="/video/2.mp4">
+							<div class="swiper-slide start-banner-slider-item" video-src="video/2.mp4">
 								<!-- Play button -->
 								<div class="play-btn">
 									<img src="img/play-icon.svg" alt="Play icon">
@@ -135,7 +135,7 @@
 							</div>
 
 							<!-- Item -->
-							<div class="swiper-slide start-banner-slider-item" video-src="/video/1.mp4">
+							<div class="swiper-slide start-banner-slider-item" video-src="video/1.mp4">
 								<!-- Play button -->
 								<div class="play-btn">
 									<img src="img/play-icon.svg" alt="Play icon">
@@ -157,7 +157,7 @@
 	</section>
 
 	<!-- About -->
-	<section class="about section">
+	<section class="about section" id="about">
 		<!-- Container -->
 		<div class="m-container">
 			<!-- Title -->
@@ -233,7 +233,7 @@
 	</section>
 
 	<!-- Services -->
-	<section class="services section">
+	<section class="services section" id="services">
 		<!-- Container -->
 		<div class="m-container">
 			<h2 class="section-title">Услуги</h2>
@@ -326,7 +326,7 @@
 	</section>
 
 	<!-- Portfolio -->
-	<section class="portfolio section">
+	<section class="portfolio section" id="portfolio">
 		<!-- Container -->
 		<div class="m-container">
 			<!-- Row -->
@@ -401,7 +401,7 @@
 	</section>
 
 	<!-- Contact -->
-	<section class="contact section">
+	<section class="contact section" id="contact">
 		<!-- Container -->
 		<div class="m-container">
 			<!-- Title -->
@@ -622,10 +622,10 @@
 	<nav class="mobile-nav">
 		<!-- Menu -->
 		<menu class="mobile-nav-menu">
-			<li><a href="#">О компании</a></li>
-			<li><a href="#">Услуги</a></li>
-			<li><a href="#">Проекты</a></li>
-			<li><a href="#">Контакты</a></li>
+			<li class="menu-item"><a href="#about">О компании</a></li>
+			<li class="menu-item"><a href="#services">Услуги</a></li>
+			<li class="menu-item"><a href="#portfolio">Проекты</a></li>
+			<li class="menu-item"><a href="#contact">Контакты</a></li>
 		</menu>
 
 		<!-- Logo -->
