--- a/M-Auto/index.html
+++ b/M-Auto/index.html
@@ -117,7 +117,7 @@
 
 								<!-- Video -->
 								<video>
-									<source src="/video/1.mp4" type="video/mp4">
+									<source src="video/1.mp4" type="video/mp4">
 								</video>
 							</div>
 
@@ -130,7 +130,7 @@
 
 								<!-- Video -->
 								<video>
-									<source src="/video/2.mp4" type="video/mp4">
+									<source src="video/2.mp4" type="video/mp4">
 								</video>
 							</div>
 
@@ -143,7 +143,7 @@
 
 								<!-- Video -->
 								<video>
-									<source src="/video/1.mp4" type="video/mp4">
+									<source src="video/1.mp4" type="video/mp4">
 								</video>
 							</div>
 						</div>
